# --
# Changes of OTRS
# Copyright (C) 2001-2006 Martin Edenhofer <martin+code@otrs.org>
# --
# $Id: CHANGES,v 1.227 2006-01-23 20:40:30 cs Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
CVS head
 - (2005/12/29) added online repository access for bin/opm.pl
 - (2005/12/29) added Delete and Spam config option to
    Kernel/Config/Files/Ticket.xml for Ticket::Frontend::MenuModule
 - (2005/12/21) added column type check in xml database defination
 - (2005/12/20) added unit test system
 - (2005/12/17) improved admin view of session management
 - (2005/12/04) moved FAQ from framework to own application module
    (can be installed over opm online repository now)
 - (2005/11/27) moved otrs archive directory for download and in RPMs
    from otrs to otrs-x.x.x
 - (2005/11/20) added multi pre application module support, just
    define it like:
    $Self->{PreApplicationModule}->{AgentInfo} = 'Kernel::Modules::AgentInfo';

2.0.5 (2006/??/??)
 - (2006/01/23) fixed bug #1069 - Problem when the name of a GenericAgent
    job was updated
 - (2005/12/29) fixed ArticleAttachmentIndex() - wrong index count in
    fs lookup - attachment icons sometimes not shown
 - (2005/12/29) added added missing class="button" in submit type="submit"
    of .dtl templates
 - (2005/12/27) fixed default note-type and default state-type in ticket
    pending mask
 - (2005/12/23) fixed stats/graph error message 'Can't call method "png"
    on an undefined value at ...'
 - (2005/12/21) fixed missing delete on time_accounting in
    Kernel/System/Ticket/Article.pm if article got deleted
 - (2005/12/20) improved die if xml is invalid in Kernel/System/XML.pm
 - (2005/12/12) added compat config option for compose answer to
    replace original sender with current customers email address