@@ -1,8 +1,8 @@
 # --
-# Changes of OTRS
+# CHANGES - change log  of OTRS
 # Copyright (C) 2001-2006 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: CHANGES,v 1.227 2006-01-23 20:40:30 cs Exp $
+# $Id: CHANGES,v 1.228 2006-01-24 12:22:36 cs Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -24,6 +24,8 @@ CVS head
     $Self->{PreApplicationModule}->{AgentInfo} = 'Kernel::Modules::AgentInfo';
 
 2.0.5 (2006/??/??)
+ - (2006/01/24) Added X-Spam-Level to config files to have the possibility
+     to filter for this header with PostMasterFilter
  - (2006/01/23) fixed bug #1069 - Problem when the name of a GenericAgent
     job was updated
  - (2005/12/29) fixed ArticleAttachmentIndex() - wrong index count in
